--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # to run locally change this line to "http://localhost:3000"
-API_URL = "http://localhost:3000"
+API_URL = "https://safe-plains-52098.herokuapp.com"
 
 GAMES_PATH = "/api/v1/games/"
